book: update pl
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/pl/v2/Dostosowywanie-Gita-An-Example-Git-Enforced-Policy.html
+++ b/external/book/content/book/pl/v2/Dostosowywanie-Gita-An-Example-Git-Enforced-Policy.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Dostosowywanie-Gita-Git-Hooks
     next: book/pl/v2/Dostosowywanie-Gita-Summary
 title: Git - An Example Git-Enforced Policy
+aliases:
+- "/book/pl/Dostosowywanie-Gita-An-Example-Git-Enforced-Policy.html"
+- "/book/pl/v1/Dostosowywanie-Gita-An-Example-Git-Enforced-Policy.html"
 ---
 <h2 id="_an_example_git_enforced_policy">An Example Git-Enforced Policy</h2>
 <div class="paragraph">
