--- a/external/book/content/book/pl/v2/Dostosowywanie-Gita-Git-Attributes.html
+++ b/external/book/content/book/pl/v2/Dostosowywanie-Gita-Git-Attributes.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Dostosowywanie-Gita-Konfiguracja-Gita
     next: book/pl/v2/Dostosowywanie-Gita-Git-Hooks
 title: Git - Git Attributes
+aliases:
+- "/book/pl/Dostosowywanie-Gita-Git-Attributes.html"
+- "/book/pl/v1/Dostosowywanie-Gita-Git-Attributes.html"
 ---
 <h2 id="_git_attributes">Git Attributes</h2>
 <div class="paragraph">
