--- a/external/book/content/book/pl/v2/Dostosowywanie-Gita-Git-Hooks.html
+++ b/external/book/content/book/pl/v2/Dostosowywanie-Gita-Git-Hooks.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Dostosowywanie-Gita-Git-Attributes
     next: book/pl/v2/Dostosowywanie-Gita-An-Example-Git-Enforced-Policy
 title: Git - Git Hooks
+aliases:
+- "/book/pl/Dostosowywanie-Gita-Git-Hooks.html"
+- "/book/pl/v1/Dostosowywanie-Gita-Git-Hooks.html"
 ---
 <h2 id="_git_hooks">Git Hooks</h2>
 <div class="paragraph">
