--- a/external/book/content/book/pl/v2/Dostosowywanie-Gita-Konfiguracja-Gita.html
+++ b/external/book/content/book/pl/v2/Dostosowywanie-Gita-Konfiguracja-Gita.html
@@ -16,6 +16,11 @@ book:
     previous: book/pl/v2/Narzędzia-Gita-Podsumowanie
     next: book/pl/v2/Dostosowywanie-Gita-Git-Attributes
 title: Git - Konfiguracja Gita
+aliases:
+- "/book/pl/Dostosowywanie-Gita.html"
+- "/book/pl/v1/Dostosowywanie-Gita.html"
+- "/book/pl/Dostosowywanie-Gita-Konfiguracja-Gita.html"
+- "/book/pl/v1/Dostosowywanie-Gita-Konfiguracja-Gita.html"
 ---
 <p>Do tej pory opisałem podstawowe rzeczy związane z działaniem i użytkowaniem Gita, oraz pokazałem kilka narzędzi dostarczanych przez Git, ułatwiających i usprawniających pracę.
 W tym rozdziale, przejdziemy przez funkcjonalności których możesz użyć, aby Git działał w bardziej dostosowany do Twoich potrzeb sposób, pokazując kilka ważnych ustawień oraz system hooków.
