--- a/external/book/content/book/pl/v2/Gałęzie-Gita-Czym-jest-gałąź.html
+++ b/external/book/content/book/pl/v2/Gałęzie-Gita-Czym-jest-gałąź.html
@@ -17,6 +17,11 @@ book:
     next: book/pl/v2/Gałęzie-Gita-Podstawy-rozgałęziania-i-scalania
 title: Git - Czym jest gałąź
 url: "/book/pl/v2/Gałęzie-Gita-Czym-jest-gałąź.html"
+aliases:
+- "/book/pl/Gałęzie-Gita.html"
+- "/book/pl/v1/Gałęzie-Gita.html"
+- "/book/pl/Gałęzie-Gita-Czym-jest-gałąź.html"
+- "/book/pl/v1/Gałęzie-Gita-Czym-jest-gałąź.html"
 ---
 <p>
 Prawie każdy system kontroli wersji posiada wsparcie dla gałęzi. Rozgałęzienie oznacza odbicie od głównego pnia linii rozwoju i kontynuację pracy bez wprowadzania tam bałaganu. W wielu narzędziach kontroli wersji jest to proces dość kosztowny, często wymagający utworzenia nowej kopii katalogu z kodem, co w przypadku dużych projektów może zająć sporo czasu.</p><p>Niektórzy uważają model gałęzi Gita za jego „killer feature” i z całą pewnością wyróżnia go spośród innych narzędzi tego typu. Co w nim specjalnego? Sposób, w jaki Git obsługuje gałęzie, jest niesamowicie lekki, przez co tworzenie nowych gałęzi jest niemalże natychmiastowe, a przełączanie się pomiędzy nimi trwa niewiele dłużej. W odróżnieniu od wielu innych systemów, Git zachęca do częstego rozgałęziania i scalania projektu, nawet kilkukrotnie w ciągu jednego dnia. Zrozumienie i opanowanie tego wyjątkowego i potężnego mechanizmu może dosłownie zmienić sposób, w jaki pracujesz.</p>
