--- a/external/book/content/book/pl/v2/Gałęzie-Gita-Gałęzie-zdalne.html
+++ b/external/book/content/book/pl/v2/Gałęzie-Gita-Gałęzie-zdalne.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Gałęzie-Gita-Zmiana-bazy
 title: Git - Gałęzie zdalne
 url: "/book/pl/v2/Gałęzie-Gita-Gałęzie-zdalne.html"
+aliases:
+- "/book/pl/Gałęzie-Gita-Gałęzie-zdalne.html"
+- "/book/pl/v1/Gałęzie-Gita-Gałęzie-zdalne.html"
 ---
 <h2 id="_remote_branches">Gałęzie zdalne</h2>
 <div class="paragraph">
