--- a/external/book/content/book/pl/v2/Gałęzie-Gita-Podstawy-rozgałęziania-i-scalania.html
+++ b/external/book/content/book/pl/v2/Gałęzie-Gita-Podstawy-rozgałęziania-i-scalania.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Gałęzie-Gita-Zarządzanie-gałęziami
 title: Git - Podstawy rozgałęziania i scalania
 url: "/book/pl/v2/Gałęzie-Gita-Podstawy-rozgałęziania-i-scalania.html"
+aliases:
+- "/book/pl/Gałęzie-Gita-Podstawy-rozgałęziania-i-scalania.html"
+- "/book/pl/v1/Gałęzie-Gita-Podstawy-rozgałęziania-i-scalania.html"
 ---
 <h2 id="_podstawy_rozgałęziania_i_scalania">Podstawy rozgałęziania i scalania</h2>
 <div class="paragraph">
