--- a/external/book/content/book/pl/v2/Gałęzie-Gita-Podsumowanie.html
+++ b/external/book/content/book/pl/v2/Gałęzie-Gita-Podsumowanie.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Git-na-serwerze-Protokoły
 title: Git - Podsumowanie
 url: "/book/pl/v2/Gałęzie-Gita-Podsumowanie.html"
+aliases:
+- "/book/pl/Gałęzie-Gita-Podsumowanie.html"
+- "/book/pl/v1/Gałęzie-Gita-Podsumowanie.html"
 ---
 <h2 id="_podsumowanie_3">Podsumowanie</h2>
 <div class="paragraph">
