--- a/external/book/content/book/pl/v2/Gałęzie-Gita-Sposoby-pracy-z-gałęziami.html
+++ b/external/book/content/book/pl/v2/Gałęzie-Gita-Sposoby-pracy-z-gałęziami.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Gałęzie-Gita-Gałęzie-zdalne
 title: Git - Sposoby pracy z gałęziami
 url: "/book/pl/v2/Gałęzie-Gita-Sposoby-pracy-z-gałęziami.html"
+aliases:
+- "/book/pl/Gałęzie-Gita-Sposoby-pracy-z-gałęziami.html"
+- "/book/pl/v1/Gałęzie-Gita-Sposoby-pracy-z-gałęziami.html"
 ---
 <h2 id="_sposoby_pracy_z_gałęziami">Sposoby pracy z gałęziami</h2>
 <div class="paragraph">
