--- a/external/book/content/book/pl/v2/Gałęzie-Gita-Zarządzanie-gałęziami.html
+++ b/external/book/content/book/pl/v2/Gałęzie-Gita-Zarządzanie-gałęziami.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Gałęzie-Gita-Sposoby-pracy-z-gałęziami
 title: Git - Zarządzanie gałęziami
 url: "/book/pl/v2/Gałęzie-Gita-Zarządzanie-gałęziami.html"
+aliases:
+- "/book/pl/Gałęzie-Gita-Zarządzanie-gałęziami.html"
+- "/book/pl/v1/Gałęzie-Gita-Zarządzanie-gałęziami.html"
 ---
 <h2 id="_branch_management">Zarządzanie gałęziami</h2>
 <div class="paragraph">
