--- a/external/book/content/book/pl/v2/Gałęzie-Gita-Zmiana-bazy.html
+++ b/external/book/content/book/pl/v2/Gałęzie-Gita-Zmiana-bazy.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Gałęzie-Gita-Podsumowanie
 title: Git - Zmiana bazy
 url: "/book/pl/v2/Gałęzie-Gita-Zmiana-bazy.html"
+aliases:
+- "/book/pl/Gałęzie-Gita-Zmiana-bazy.html"
+- "/book/pl/v1/Gałęzie-Gita-Zmiana-bazy.html"
 ---
 <h2 id="_rebasing">Zmiana bazy</h2>
 <div class="paragraph">
