--- a/external/book/content/book/pl/v2/Git-i-inne-systemy-Git-jako-klient.html
+++ b/external/book/content/book/pl/v2/Git-i-inne-systemy-Git-jako-klient.html
@@ -16,6 +16,11 @@ book:
     previous: book/pl/v2/Dostosowywanie-Gita-Summary
     next: book/pl/v2/Git-i-inne-systemy-Migracja-do-Gita
 title: Git - Git jako klient
+aliases:
+- "/book/pl/Git-i-inne-systemy.html"
+- "/book/pl/v1/Git-i-inne-systemy.html"
+- "/book/pl/Git-i-inne-systemy-Git-i-Subversion.html"
+- "/book/pl/v1/Git-i-inne-systemy-Git-i-Subversion.html"
 ---
 <p>Świat nie jest idealny.
 Zazwyczaj nie możesz od razu przejść w każdym projekcie na Gita.
