--- a/external/book/content/book/pl/v2/Git-i-inne-systemy-Migracja-do-Gita.html
+++ b/external/book/content/book/pl/v2/Git-i-inne-systemy-Migracja-do-Gita.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Git-i-inne-systemy-Git-jako-klient
     next: book/pl/v2/Git-i-inne-systemy-Podsumowanie
 title: Git - Migracja do Gita
+aliases:
+- "/book/pl/Git-i-inne-systemy-Migracja-do-Gita.html"
+- "/book/pl/v1/Git-i-inne-systemy-Migracja-do-Gita.html"
 ---
 <h2 id="_migrating">Migracja do Gita</h2>
 <div class="paragraph">
