--- a/external/book/content/book/pl/v2/Git-i-inne-systemy-Podsumowanie.html
+++ b/external/book/content/book/pl/v2/Git-i-inne-systemy-Podsumowanie.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Git-i-inne-systemy-Migracja-do-Gita
     next: book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Komendy-typu-plumbing-i-porcelain
 title: Git - Podsumowanie
+aliases:
+- "/book/pl/Git-i-inne-systemy-Podsumowanie.html"
+- "/book/pl/v1/Git-i-inne-systemy-Podsumowanie.html"
 ---
 <h2 id="_podsumowanie_8">Podsumowanie</h2>
 <div class="paragraph">
