--- a/external/book/content/book/pl/v2/Git-na-serwerze-Generowanie-Twojego-publicznego-klucza-SSH.html
+++ b/external/book/content/book/pl/v2/Git-na-serwerze-Generowanie-Twojego-publicznego-klucza-SSH.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Git-na-serwerze-Uruchomienie-Git-na-serwerze
     next: book/pl/v2/Git-na-serwerze-Konfigurowanie-serwera
 title: Git - Generowanie Twojego publicznego klucza SSH
+aliases:
+- "/book/pl/Git-na-serwerze-Generacja-pary-kluczy-SSH.html"
+- "/book/pl/v1/Git-na-serwerze-Generacja-pary-kluczy-SSH.html"
 ---
 <h2 id="_generate_ssh_key">Generowanie Twojego publicznego klucza SSH</h2>
 <div class="paragraph">
