--- a/external/book/content/book/pl/v2/Git-na-serwerze-Git-Daemon.html
+++ b/external/book/content/book/pl/v2/Git-na-serwerze-Git-Daemon.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Git-na-serwerze-Konfigurowanie-serwera
     next: book/pl/v2/Git-na-serwerze-Smart-HTTP
 title: Git - Git Daemon
+aliases:
+- "/book/pl/Git-na-serwerze-Git-Demon.html"
+- "/book/pl/v1/Git-na-serwerze-Git-Demon.html"
 ---
 <h2 id="_git_daemon">Git Daemon</h2>
 <div class="paragraph">
