--- a/external/book/content/book/pl/v2/Git-na-serwerze-Inne-opcje-hostowania-przez-podmioty-zewnętrzne.html
+++ b/external/book/content/book/pl/v2/Git-na-serwerze-Inne-opcje-hostowania-przez-podmioty-zewnętrzne.html
@@ -17,6 +17,17 @@ book:
     next: book/pl/v2/Git-na-serwerze-Podsumowanie
 title: Git - Inne opcje hostowania przez podmioty zewnętrzne
 url: "/book/pl/v2/Git-na-serwerze-Inne-opcje-hostowania-przez-podmioty-zewnętrzne.html"
+aliases:
+- "/book/pl/Git-na-serwerze-Dostęp-publiczny.html"
+- "/book/pl/v1/Git-na-serwerze-Dostęp-publiczny.html"
+- "/book/pl/Git-na-serwerze-GitWeb.html"
+- "/book/pl/v1/Git-na-serwerze-GitWeb.html"
+- "/book/pl/Git-na-serwerze-Gitosis.html"
+- "/book/pl/v1/Git-na-serwerze-Gitosis.html"
+- "/book/pl/Git-na-serwerze-Gitolite.html"
+- "/book/pl/v1/Git-na-serwerze-Gitolite.html"
+- "/book/pl/Git-na-serwerze-Hosting-Gita.html"
+- "/book/pl/v1/Git-na-serwerze-Hosting-Gita.html"
 ---
 <h2 id="_inne_opcje_hostowania_przez_podmioty_zewnętrzne">Inne opcje hostowania przez podmioty zewnętrzne</h2>
 <div class="paragraph">
