--- a/external/book/content/book/pl/v2/Git-na-serwerze-Konfigurowanie-serwera.html
+++ b/external/book/content/book/pl/v2/Git-na-serwerze-Konfigurowanie-serwera.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Git-na-serwerze-Generowanie-Twojego-publicznego-klucza-SSH
     next: book/pl/v2/Git-na-serwerze-Git-Daemon
 title: Git - Konfigurowanie serwera
+aliases:
+- "/book/pl/Git-na-serwerze-Konfiguracja-serwera.html"
+- "/book/pl/v1/Git-na-serwerze-Konfiguracja-serwera.html"
 ---
 <h2 id="_setting_up_server">Konfigurowanie serwera</h2>
 <div class="paragraph">
