--- a/external/book/content/book/pl/v2/Git-na-serwerze-Podsumowanie.html
+++ b/external/book/content/book/pl/v2/Git-na-serwerze-Podsumowanie.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Git-na-serwerze-Inne-opcje-hostowania-przez-podmioty-zewnętrzne
     next: book/pl/v2/Rozproszony-Git-Rozproszone-przepływy-pracy
 title: Git - Podsumowanie
+aliases:
+- "/book/pl/Git-na-serwerze-Podsumowanie.html"
+- "/book/pl/v1/Git-na-serwerze-Podsumowanie.html"
 ---
 <h2 id="_podsumowanie_4">Podsumowanie</h2>
 <div class="paragraph">
