--- a/external/book/content/book/pl/v2/Git-na-serwerze-Protokoły.html
+++ b/external/book/content/book/pl/v2/Git-na-serwerze-Protokoły.html
@@ -17,6 +17,11 @@ book:
     next: book/pl/v2/Git-na-serwerze-Uruchomienie-Git-na-serwerze
 title: Git - Protokoły
 url: "/book/pl/v2/Git-na-serwerze-Protokoły.html"
+aliases:
+- "/book/pl/Git-na-serwerze.html"
+- "/book/pl/v1/Git-na-serwerze.html"
+- "/book/pl/Git-na-serwerze-Protokoły.html"
+- "/book/pl/v1/Git-na-serwerze-Protokoły.html"
 ---
 <p>
 Powinieneś być już w stanie realizować większość codziennych zadań podczas pracy z Git.
