--- a/external/book/content/book/pl/v2/Git-na-serwerze-Uruchomienie-Git-na-serwerze.html
+++ b/external/book/content/book/pl/v2/Git-na-serwerze-Uruchomienie-Git-na-serwerze.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Git-na-serwerze-Protokoły
     next: book/pl/v2/Git-na-serwerze-Generowanie-Twojego-publicznego-klucza-SSH
 title: Git - Uruchomienie Git na serwerze
+aliases:
+- "/book/pl/Git-na-serwerze-Uruchomienie-Git-na-serwerze.html"
+- "/book/pl/v1/Git-na-serwerze-Uruchomienie-Git-na-serwerze.html"
 ---
 <h2 id="_git_on_the_server">Uruchomienie Git na serwerze</h2>
 <div class="paragraph">
