--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Komendy-typu-plumbing-i-porcelain.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Komendy-typu-plumbing-i-porcelain.html
@@ -17,6 +17,11 @@ book:
     next: book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Obiekty-Gita
 title: Git - Komendy typu plumbing i porcelain
 url: "/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Komendy-typu-plumbing-i-porcelain.html"
+aliases:
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git.html"
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git-Komendy-Plumbing-i-Porcelain.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git-Komendy-Plumbing-i-Porcelain.html"
 ---
 <p>Być może przeskoczyłeś do tego rozdziału z poprzedniego, lub dotarłeś aż dotąd po przeczytaniu reszty książki – w każdym z tych przypadków, dowiesz się tutaj o tym w jaki sposób pracują wewnętrzne mechanizmy i ich implementacja w Git.
 Wiem, jak ważne jest poznanie tych rzeczy, aby zrozumieć jak przydatnym i potężnym narzędziem jest Git, jednak niektóre osoby wskazywały że może to wprowadzać zamieszanie i niepotrzebnie komplikować sprawy dla początkujących użytkowników.
