--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Konserwacja-i-odzyskiwanie-danych.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Konserwacja-i-odzyskiwanie-danych.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Environment-Variables
 title: Git - Konserwacja i odzyskiwanie danych
 url: "/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Konserwacja-i-odzyskiwanie-danych.html"
+aliases:
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git-Konserwacja-i-Odzyskiwanie-Danych.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git-Konserwacja-i-Odzyskiwanie-Danych.html"
 ---
 <h2 id="_konserwacja_i_odzyskiwanie_danych">Konserwacja i odzyskiwanie danych</h2>
 <div class="paragraph">
