--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Obiekty-Gita.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Obiekty-Gita.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Referencje-w-Git
 title: Git - Obiekty Gita
 url: "/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Obiekty-Gita.html"
+aliases:
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git-Obiekty-Gita.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git-Obiekty-Gita.html"
 ---
 <h2 id="_objects">Obiekty Gita</h2>
 <div class="paragraph">
