--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Podsumowanie.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Podsumowanie.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Appendix-A:-Git-in-Other-Environments-Graphical-Interfaces
 title: Git - Podsumowanie
 url: "/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Podsumowanie.html"
+aliases:
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git-Podsumowanie.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git-Podsumowanie.html"
 ---
 <h2 id="_podsumowanie_9">Podsumowanie</h2>
 <div class="paragraph">
