--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Protokoły-transferu.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Protokoły-transferu.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Konserwacja-i-odzyskiwanie-danych
 title: Git - Protokoły transferu
 url: "/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Protokoły-transferu.html"
+aliases:
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git-Protokoły-transferu.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git-Protokoły-transferu.html"
 ---
 <h2 id="_protokoły_transferu">Protokoły transferu</h2>
 <div class="paragraph">
