--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Referencje-w-Git.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Referencje-w-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Spakowane-pliki-packfiles
 title: Git - Referencje w Git
 url: "/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Referencje-w-Git.html"
+aliases:
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git-Referencje-w-Git.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git-Referencje-w-Git.html"
 ---
 <h2 id="_git_refs">Referencje w Git</h2>
 <div class="paragraph">
