--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Refspec.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Refspec.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Protokoły-transferu
 title: Git - Refspec
 url: "/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Refspec.html"
+aliases:
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git-Refspec.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git-Refspec.html"
 ---
 <h2 id="_refspec">Refspec</h2>
 <div class="paragraph">
