--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Spakowane-pliki-packfiles.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Spakowane-pliki-packfiles.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Refspec
 title: Git - Spakowane pliki (packfiles)
 url: "/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Spakowane-pliki-packfiles.html"
+aliases:
+- "/book/pl/Mechanizmy-wewnętrzne-w-Git-Spakowane-pliki-packfiles.html"
+- "/book/pl/v1/Mechanizmy-wewnętrzne-w-Git-Spakowane-pliki-packfiles.html"
 ---
 <h2 id="_spakowane_pliki_packfiles">Spakowane pliki (packfiles)</h2>
 <div class="paragraph">
