--- a/external/book/content/book/pl/v2/Narzędzia-Gita-Advanced-Merging.html
+++ b/external/book/content/book/pl/v2/Narzędzia-Gita-Advanced-Merging.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Narzędzia-Gita-Rerere
 title: Git - Advanced Merging
 url: "/book/pl/v2/Narzędzia-Gita-Advanced-Merging.html"
+aliases:
+- "/book/pl/Narzędzia-Gita-Włączanie-innych-projektów.html"
+- "/book/pl/v1/Narzędzia-Gita-Włączanie-innych-projektów.html"
 ---
 <h2 id="_advanced_merging">Advanced Merging</h2>
 <div class="paragraph">
