--- a/external/book/content/book/pl/v2/Narzędzia-Gita-Debugowanie-z-Gitem.html
+++ b/external/book/content/book/pl/v2/Narzędzia-Gita-Debugowanie-z-Gitem.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Narzędzia-Gita-Moduły-zależne
 title: Git - Debugowanie z Gitem
 url: "/book/pl/v2/Narzędzia-Gita-Debugowanie-z-Gitem.html"
+aliases:
+- "/book/pl/Narzędzia-Gita-Debugowanie-z-Gitem.html"
+- "/book/pl/v1/Narzędzia-Gita-Debugowanie-z-Gitem.html"
 ---
 <h2 id="_debugowanie_z_gitem">Debugowanie z Gitem</h2>
 <div class="paragraph">
