--- a/external/book/content/book/pl/v2/Narzędzia-Gita-Interaktywne-używanie-przechowali.html
+++ b/external/book/content/book/pl/v2/Narzędzia-Gita-Interaktywne-używanie-przechowali.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Narzędzia-Gita-Schowek-i-czyszczenie
 title: Git - Interaktywne używanie przechowali
 url: "/book/pl/v2/Narzędzia-Gita-Interaktywne-używanie-przechowali.html"
+aliases:
+- "/book/pl/Narzędzia-Gita-Interaktywne-używanie-przechowali.html"
+- "/book/pl/v1/Narzędzia-Gita-Interaktywne-używanie-przechowali.html"
 ---
 <h2 id="_interactive_staging">Interaktywne używanie przechowali</h2>
 <div class="paragraph">
