--- a/external/book/content/book/pl/v2/Narzędzia-Gita-Moduły-zależne.html
+++ b/external/book/content/book/pl/v2/Narzędzia-Gita-Moduły-zależne.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Narzędzia-Gita-Bundling
 title: Git - Moduły zależne
 url: "/book/pl/v2/Narzędzia-Gita-Moduły-zależne.html"
+aliases:
+- "/book/pl/Narzędzia-Gita-Moduły-zależne.html"
+- "/book/pl/v1/Narzędzia-Gita-Moduły-zależne.html"
 ---
 <h2 id="_git_submodules">Moduły zależne</h2>
 <div class="paragraph">
