--- a/external/book/content/book/pl/v2/Narzędzia-Gita-Podsumowanie.html
+++ b/external/book/content/book/pl/v2/Narzędzia-Gita-Podsumowanie.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Dostosowywanie-Gita-Konfiguracja-Gita
 title: Git - Podsumowanie
 url: "/book/pl/v2/Narzędzia-Gita-Podsumowanie.html"
+aliases:
+- "/book/pl/Narzędzia-Gita-Podsumowanie.html"
+- "/book/pl/v1/Narzędzia-Gita-Podsumowanie.html"
 ---
 <h2 id="_podsumowanie_7">Podsumowanie</h2>
 <div class="paragraph">
