--- a/external/book/content/book/pl/v2/Narzędzia-Gita-Przepisywanie-historii.html
+++ b/external/book/content/book/pl/v2/Narzędzia-Gita-Przepisywanie-historii.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Narzędzia-Gita-Reset-Demystified
 title: Git - Przepisywanie historii
 url: "/book/pl/v2/Narzędzia-Gita-Przepisywanie-historii.html"
+aliases:
+- "/book/pl/Narzędzia-Gita-Przepisywanie-Historii.html"
+- "/book/pl/v1/Narzędzia-Gita-Przepisywanie-Historii.html"
 ---
 <h2 id="_rewriting_history">Przepisywanie historii</h2>
 <div class="paragraph">
