--- a/external/book/content/book/pl/v2/Narzędzia-Gita-Schowek-i-czyszczenie.html
+++ b/external/book/content/book/pl/v2/Narzędzia-Gita-Schowek-i-czyszczenie.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Narzędzia-Gita-Signing-Your-Work
 title: Git - Schowek i czyszczenie
 url: "/book/pl/v2/Narzędzia-Gita-Schowek-i-czyszczenie.html"
+aliases:
+- "/book/pl/Narzędzia-Gita-Schowek.html"
+- "/book/pl/v1/Narzędzia-Gita-Schowek.html"
 ---
 <h2 id="_git_stashing">Schowek i czyszczenie</h2>
 <div class="paragraph">
