--- a/external/book/content/book/pl/v2/Narzędzia-Gita-Wskazywanie-rewizji.html
+++ b/external/book/content/book/pl/v2/Narzędzia-Gita-Wskazywanie-rewizji.html
@@ -17,6 +17,11 @@ book:
     next: book/pl/v2/Narzędzia-Gita-Interaktywne-używanie-przechowali
 title: Git - Wskazywanie rewizji
 url: "/book/pl/v2/Narzędzia-Gita-Wskazywanie-rewizji.html"
+aliases:
+- "/book/pl/Narzędzia-Gita.html"
+- "/book/pl/v1/Narzędzia-Gita.html"
+- "/book/pl/Narzędzia-Gita-Wskazywanie-rewizji.html"
+- "/book/pl/v1/Narzędzia-Gita-Wskazywanie-rewizji.html"
 ---
 <p>Do tej chwili poznałeś większość komend potrzebnych do codziennej pracy, oraz do prowadzenia repozytorium ze swoim kodem.
 Wykonywałeś podstawowe zadania dotyczące śledzenia i wprowadzania zmian, oraz wykorzystywałeś przechowalnię, jak również rozgałęzianie oraz łączenie różnych gałęzi.</p><p>Teraz dowiesz się o kolejnych rzeczach, które Git ma do zaoferowania, z których być może nie będziesz korzystał codziennie, ale które z pewnością będą przydatne.</p>
