--- a/external/book/content/book/pl/v2/Pierwsze-kroki-Instalacja-Git.html
+++ b/external/book/content/book/pl/v2/Pierwsze-kroki-Instalacja-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Pierwsze-kroki-Linia-poleceń
     next: book/pl/v2/Pierwsze-kroki-Wstępna-konfiguracja-Git
 title: Git - Instalacja Git
+aliases:
+- "/book/pl/Pierwsze-kroki-Instalacja-Git.html"
+- "/book/pl/v1/Pierwsze-kroki-Instalacja-Git.html"
 ---
 <h2 id="_instalacja_git">Instalacja Git</h2>
 <div class="paragraph">
