--- a/external/book/content/book/pl/v2/Pierwsze-kroki-Krótka-historia-Git.html
+++ b/external/book/content/book/pl/v2/Pierwsze-kroki-Krótka-historia-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Pierwsze-kroki-Podstawy-Git
 title: Git - Krótka historia Git
 url: "/book/pl/v2/Pierwsze-kroki-Krótka-historia-Git.html"
+aliases:
+- "/book/pl/Pierwsze-kroki-Krótka-historia-Git.html"
+- "/book/pl/v1/Pierwsze-kroki-Krótka-historia-Git.html"
 ---
 <h2 id="_krótka_historia_git">Krótka historia Git</h2>
 <div class="paragraph">
