--- a/external/book/content/book/pl/v2/Pierwsze-kroki-Podsumowanie.html
+++ b/external/book/content/book/pl/v2/Pierwsze-kroki-Podsumowanie.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Pierwsze-kroki-Uzyskiwanie-pomocy
     next: book/pl/v2/Podstawy-Gita-Pierwsze-repozytorium-Gita
 title: Git - Podsumowanie
+aliases:
+- "/book/pl/Pierwsze-kroki-Podsumowanie.html"
+- "/book/pl/v1/Pierwsze-kroki-Podsumowanie.html"
 ---
 <h2 id="_podsumowanie">Podsumowanie</h2>
 <div class="paragraph">
