--- a/external/book/content/book/pl/v2/Pierwsze-kroki-Uzyskiwanie-pomocy.html
+++ b/external/book/content/book/pl/v2/Pierwsze-kroki-Uzyskiwanie-pomocy.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Pierwsze-kroki-Wstępna-konfiguracja-Git
     next: book/pl/v2/Pierwsze-kroki-Podsumowanie
 title: Git - Uzyskiwanie pomocy
+aliases:
+- "/book/pl/Pierwsze-kroki-Uzyskiwanie-pomocy.html"
+- "/book/pl/v1/Pierwsze-kroki-Uzyskiwanie-pomocy.html"
 ---
 <h2 id="_git_help">Uzyskiwanie pomocy</h2>
 <div class="paragraph">
