--- a/external/book/content/book/pl/v2/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji.html
+++ b/external/book/content/book/pl/v2/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji.html
@@ -16,6 +16,11 @@ book:
     previous: book/pl/v2/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji
     next: book/pl/v2/Pierwsze-kroki-Krótka-historia-Git
 title: Git - Wprowadzenie do kontroli wersji
+aliases:
+- "/book/pl/Pierwsze-kroki.html"
+- "/book/pl/v1/Pierwsze-kroki.html"
+- "/book/pl/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji.html"
+- "/book/pl/v1/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji.html"
 ---
 <p>Ten rozdział poświęcony jest pierwszym krokom z Git. Rozpoczyna się krótkim wprowadzeniem do narzędzi kontroli wersji, następnie przechodzi do instalacji i początkowej konfiguracji Git. Po przeczytaniu tego rozdziału powinieneś rozumieć w jakim celu Git został stworzony, dlaczego warto z niego korzystać oraz być przygotowany do używania go.</p>
 <h2 id="_wprowadzenie_do_kontroli_wersji">Wprowadzenie do kontroli wersji</h2>
