--- a/external/book/content/book/pl/v2/Pierwsze-kroki-Wstępna-konfiguracja-Git.html
+++ b/external/book/content/book/pl/v2/Pierwsze-kroki-Wstępna-konfiguracja-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Pierwsze-kroki-Uzyskiwanie-pomocy
 title: Git - Wstępna konfiguracja Git
 url: "/book/pl/v2/Pierwsze-kroki-Wstępna-konfiguracja-Git.html"
+aliases:
+- "/book/pl/Pierwsze-kroki-Wstępna-konfiguracja-Git.html"
+- "/book/pl/v1/Pierwsze-kroki-Wstępna-konfiguracja-Git.html"
 ---
 <h2 id="_first_time">Wstępna konfiguracja Git</h2>
 <div class="paragraph">
