--- a/external/book/content/book/pl/v2/Podstawy-Gita-Aliasy.html
+++ b/external/book/content/book/pl/v2/Podstawy-Gita-Aliasy.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Podstawy-Gita-Tagowanie
     next: book/pl/v2/Podstawy-Gita-Podsumowanie
 title: Git - Aliasy
+aliases:
+- "/book/pl/Podstawy-Gita-Sztuczki-i-kruczki.html"
+- "/book/pl/v1/Podstawy-Gita-Sztuczki-i-kruczki.html"
 ---
 <h2 id="_git_aliases">Aliasy</h2>
 <div class="paragraph">
