--- a/external/book/content/book/pl/v2/Podstawy-Gita-Cofanie-zmian.html
+++ b/external/book/content/book/pl/v2/Podstawy-Gita-Cofanie-zmian.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Podstawy-Gita-Podgląd-historii-rewizji
     next: book/pl/v2/Podstawy-Gita-Praca-ze-zdalnym-repozytorium
 title: Git - Cofanie zmian
+aliases:
+- "/book/pl/Podstawy-Gita-Cofanie-zmian.html"
+- "/book/pl/v1/Podstawy-Gita-Cofanie-zmian.html"
 ---
 <h2 id="_undoing">Cofanie zmian</h2>
 <div class="paragraph">
