--- a/external/book/content/book/pl/v2/Podstawy-Gita-Pierwsze-repozytorium-Gita.html
+++ b/external/book/content/book/pl/v2/Podstawy-Gita-Pierwsze-repozytorium-Gita.html
@@ -16,6 +16,11 @@ book:
     previous: book/pl/v2/Pierwsze-kroki-Podsumowanie
     next: book/pl/v2/Podstawy-Gita-Rejestrowanie-zmian-w-repozytorium
 title: Git - Pierwsze repozytorium Gita
+aliases:
+- "/book/pl/Podstawy-Gita.html"
+- "/book/pl/v1/Podstawy-Gita.html"
+- "/book/pl/Podstawy-Gita-Pierwsze-repozytorium-Gita.html"
+- "/book/pl/v1/Podstawy-Gita-Pierwsze-repozytorium-Gita.html"
 ---
 <p>Jeśli chcesz ograniczyć się do czytania jednego rozdziału, dobrze trafiłeś. Niniejszy rozdział obejmuje wszystkie podstawowe polecenia, które musisz znać, aby wykonać przeważającą część zadań, z którymi przyjdzie ci spędzić czas podczas pracy z Gitem. Po zapoznaniu się z rozdziałem powinieneś umieć samodzielnie tworzyć i konfigurować repozytoria, rozpoczynać i kończyć śledzenie plików, umieszczać zmiany w poczekalni oraz je zatwierdzać. Pokażemy ci także, jak skonfigurować Gita tak, aby ignorował pewne pliki oraz całe ich grupy według zadanego wzorca, szybko i łatwo cofać błędne zmiany, przeglądać historię swojego projektu, podglądać zmiany pomiędzy rewizjami, oraz jak wypychać je na serwer i stamtąd pobierać.</p>
 <h2 id="_getting_a_repo">Pierwsze repozytorium Gita</h2>
