--- a/external/book/content/book/pl/v2/Podstawy-Gita-Podgląd-historii-rewizji.html
+++ b/external/book/content/book/pl/v2/Podstawy-Gita-Podgląd-historii-rewizji.html
@@ -17,6 +17,9 @@ book:
     next: book/pl/v2/Podstawy-Gita-Cofanie-zmian
 title: Git - Podgląd historii rewizji
 url: "/book/pl/v2/Podstawy-Gita-Podgląd-historii-rewizji.html"
+aliases:
+- "/book/pl/Podstawy-Gita-Podgląd-historii-rewizji.html"
+- "/book/pl/v1/Podstawy-Gita-Podgląd-historii-rewizji.html"
 ---
 <h2 id="_viewing_history">Podgląd historii rewizji</h2>
 <div class="paragraph">
