--- a/external/book/content/book/pl/v2/Podstawy-Gita-Podsumowanie.html
+++ b/external/book/content/book/pl/v2/Podstawy-Gita-Podsumowanie.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Podstawy-Gita-Aliasy
     next: book/pl/v2/Gałęzie-Gita-Czym-jest-gałąź
 title: Git - Podsumowanie
+aliases:
+- "/book/pl/Podstawy-Gita-Podsumowanie.html"
+- "/book/pl/v1/Podstawy-Gita-Podsumowanie.html"
 ---
 <h2 id="_podsumowanie_2">Podsumowanie</h2>
 <div class="paragraph">
