--- a/external/book/content/book/pl/v2/Podstawy-Gita-Praca-ze-zdalnym-repozytorium.html
+++ b/external/book/content/book/pl/v2/Podstawy-Gita-Praca-ze-zdalnym-repozytorium.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Podstawy-Gita-Cofanie-zmian
     next: book/pl/v2/Podstawy-Gita-Tagowanie
 title: Git - Praca ze zdalnym repozytorium
+aliases:
+- "/book/pl/Podstawy-Gita-Praca-ze-zdalnym-repozytorium.html"
+- "/book/pl/v1/Podstawy-Gita-Praca-ze-zdalnym-repozytorium.html"
 ---
 <h2 id="_remote_repos">Praca ze zdalnym repozytorium</h2>
 <div class="paragraph">
