--- a/external/book/content/book/pl/v2/Podstawy-Gita-Rejestrowanie-zmian-w-repozytorium.html
+++ b/external/book/content/book/pl/v2/Podstawy-Gita-Rejestrowanie-zmian-w-repozytorium.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Podstawy-Gita-Pierwsze-repozytorium-Gita
     next: book/pl/v2/Podstawy-Gita-Podgląd-historii-rewizji
 title: Git - Rejestrowanie zmian w repozytorium
+aliases:
+- "/book/pl/Podstawy-Gita-Rejestrowanie-zmian-w-repozytorium.html"
+- "/book/pl/v1/Podstawy-Gita-Rejestrowanie-zmian-w-repozytorium.html"
 ---
 <h2 id="_rejestrowanie_zmian_w_repozytorium">Rejestrowanie zmian w repozytorium</h2>
 <div class="paragraph">
