--- a/external/book/content/book/pl/v2/Podstawy-Gita-Tagowanie.html
+++ b/external/book/content/book/pl/v2/Podstawy-Gita-Tagowanie.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Podstawy-Gita-Praca-ze-zdalnym-repozytorium
     next: book/pl/v2/Podstawy-Gita-Aliasy
 title: Git - Tagowanie
+aliases:
+- "/book/pl/Podstawy-Gita-Tagowanie-etykietowanie.html"
+- "/book/pl/v1/Podstawy-Gita-Tagowanie-etykietowanie.html"
 ---
 <h2 id="_git_tagging">Tagowanie</h2>
 <div class="paragraph">
