--- a/external/book/content/book/pl/v2/Rozproszony-Git-Podsumowanie.html
+++ b/external/book/content/book/pl/v2/Rozproszony-Git-Podsumowanie.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Rozproszony-Git-Utrzymywanie-projektu
     next: book/pl/v2/GitHub-Account-Setup-and-Configuration
 title: Git - Podsumowanie
+aliases:
+- "/book/pl/Rozproszony-Git-Podsumowanie.html"
+- "/book/pl/v1/Rozproszony-Git-Podsumowanie.html"
 ---
 <h2 id="_podsumowanie_6">Podsumowanie</h2>
 <div class="paragraph">
