--- a/external/book/content/book/pl/v2/Rozproszony-Git-Rozproszone-przepływy-pracy.html
+++ b/external/book/content/book/pl/v2/Rozproszony-Git-Rozproszone-przepływy-pracy.html
@@ -17,6 +17,11 @@ book:
     next: book/pl/v2/Rozproszony-Git-Wgrywanie-zmian-do-projektu
 title: Git - Rozproszone przepływy pracy
 url: "/book/pl/v2/Rozproszony-Git-Rozproszone-przepływy-pracy.html"
+aliases:
+- "/book/pl/Rozproszony-Git.html"
+- "/book/pl/v1/Rozproszony-Git.html"
+- "/book/pl/Rozproszony-Git-Rozproszone-przepływy-pracy.html"
+- "/book/pl/v1/Rozproszony-Git-Rozproszone-przepływy-pracy.html"
 ---
 <p>
 Teraz, gdy masz już skonfigurowane zdalne repozytorium, które służy do wymiany pracy między programistami w projekcie oraz jesteś zaznajomiony z podstawowymi komendami pozwalającymi na pracę z lokalnym repozytorium Git, zobaczysz jak wykorzystać jego możliwości w rozproszonym trybie pracy, który Git umożliwia.</p><p>W tym rozdziale, zobaczysz jak pracować z Gitem w rozproszonym środowisku jako współpracownik lub integrator zmian.
