--- a/external/book/content/book/pl/v2/Rozproszony-Git-Utrzymywanie-projektu.html
+++ b/external/book/content/book/pl/v2/Rozproszony-Git-Utrzymywanie-projektu.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Rozproszony-Git-Wgrywanie-zmian-do-projektu
     next: book/pl/v2/Rozproszony-Git-Podsumowanie
 title: Git - Utrzymywanie projektu
+aliases:
+- "/book/pl/Rozproszony-Git-Utrzymywanie-projektu.html"
+- "/book/pl/v1/Rozproszony-Git-Utrzymywanie-projektu.html"
 ---
 <h2 id="_utrzymywanie_projektu">Utrzymywanie projektu</h2>
 <div class="paragraph">
