--- a/external/book/content/book/pl/v2/Rozproszony-Git-Wgrywanie-zmian-do-projektu.html
+++ b/external/book/content/book/pl/v2/Rozproszony-Git-Wgrywanie-zmian-do-projektu.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Rozproszony-Git-Rozproszone-przepływy-pracy
     next: book/pl/v2/Rozproszony-Git-Utrzymywanie-projektu
 title: Git - Wgrywanie zmian do projektu
+aliases:
+- "/book/pl/Rozproszony-Git-Wgrywanie-zmian-do-projektu.html"
+- "/book/pl/v1/Rozproszony-Git-Wgrywanie-zmian-do-projektu.html"
 ---
 <h2 id="_contributing_project">Wgrywanie zmian do projektu</h2>
 <div class="paragraph">
