--- a/external/book/content/book/pl/v2/Dostosowywanie-Gita-Summary.html
+++ b/external/book/content/book/pl/v2/Dostosowywanie-Gita-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Dostosowywanie-Gita-An-Example-Git-Enforced-Policy
     next: book/pl/v2/Git-i-inne-systemy-Git-jako-klient
 title: Git - Summary
+aliases:
+- "/book/pl/Dostosowywanie-Gita-Summary.html"
+- "/book/pl/v1/Dostosowywanie-Gita-Summary.html"
 ---
 <h2 id="_summary_3">Summary</h2>
 <div class="paragraph">
