--- a/external/book/content/book/pl/v2/Pierwsze-kroki-Podstawy-Git.html
+++ b/external/book/content/book/pl/v2/Pierwsze-kroki-Podstawy-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/pl/v2/Pierwsze-kroki-Krótka-historia-Git
     next: book/pl/v2/Pierwsze-kroki-Linia-poleceń
 title: Git - Podstawy Git
+aliases:
+- "/book/pl/Pierwsze-kroki-Podstawy-Git.html"
+- "/book/pl/v1/Pierwsze-kroki-Podstawy-Git.html"
 ---
 <h2 id="_podstawy_git">Podstawy Git</h2>
 <div class="paragraph">
