--- a/external/book/content/book/pl/v2/_index.html
+++ b/external/book/content/book/pl/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/pl/v2.html"
 aliases:
 - "/book/pl/v2/index.html"
+- "/book/pl/v1/index.html"
 - "/book/pl/index.html"
 ---
